--- a/actoseg/main/pages/ui-modals.html
+++ b/actoseg/main/pages/ui-modals.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="utf-8">
@@ -956,7 +956,7 @@
 				  <div class="modal-dialog">
 					<div class="modal-content">
 					  <div class="modal-header">
-						<h5 class="modal-title">Modal title</h5>
+						<h5 class="modal-title">teste charles Modal title</h5>
 						<button type="button" class="close" data-dismiss="modal">
 						  <span aria-hidden="true">&times;</span>
 						</button>
